Fixed main-row margin, registration page redirect to login after succesfull registration, fonts and colours of the redirection screens as well as changed email templates to coresond to new colour scheme.

--- a/src/changepassword/changepassword.html
+++ b/src/changepassword/changepassword.html
@@ -4,8 +4,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="oldPasswordErrors">
-          <input id="passwordOld" class="align-center" type.bind="passwordType" value.bind = "oldPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of oldPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input id="passwordOld" class="align-center brown-text" type.bind="passwordType" value.bind = "oldPassword & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]old-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of oldPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -14,8 +14,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="newPasswordErrors">
-          <input id="passwordNew" class="align-center" type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input id="passwordNew" class="align-center brown-text" type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -24,8 +24,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="newPasswordConfirmErrors">
-          <input id="passwordNewConfirm" class="align-center" type.bind="passwordType" value.bind = "newPasswordConfirm & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]new-password-again"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordConfirmErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input id="passwordNewConfirm" class="align-center brown-text" type.bind="passwordType" value.bind = "newPasswordConfirm & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]new-password-again"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of newPasswordConfirmErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
@@ -33,13 +33,13 @@
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="password-submit" t="submit"></button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-1 waves-effect waves-light" type="submit" name="password-submit" t="submit"></button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="changePass-cancel" route-href="route: basemap;" t="cancel"></a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-1 waves-effect waves-light" name="changePass-cancel" route-href="route: basemap;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <user-notification show.bind="userNotification"></user-notification>
