--- a/src/sideNav/sideNav.html
+++ b/src/sideNav/sideNav.html
@@ -1,5 +1,3 @@
 <template>
-    <md-sidenav view-model.ref="sideNav">
-
-      </md-sidenav>
-  </template>
+  <md-sidenav view-model.ref="sideNav"></md-sidenav>
+</template>
