--- a/src/basemap.html
+++ b/src/basemap.html
@@ -1,7 +1,7 @@
 <template>
   <require from="resources/value-converters/objectKeysValueConverter"></require>
   <div>
-    <div class="row">
+    <div class="row main-row">
       <ul class="light-green darken-1 collection with-header col l3 m3 s3 layer-list scrollbar-hidden">
         <li class="collection-header light-green darken-3"><h4 t="layers">Layers</h4></li>
           <div class="collapsible-open-close-events">
@@ -58,5 +58,5 @@
   </div>
   <tool-notification show.bind="toolNotification"></tool-notification>
   <tool-preloader show.bind="toolPreloader"></tool-preloader>
-
+  <user-notification show.bind="userNotification"></user-notification>
 </template>
