--- a/src/registration.html
+++ b/src/registration.html
@@ -2,16 +2,15 @@
   <form autocomplete="off" role = "form" submit.delegate = "register()">
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><h2 t="registration"></h2></div>
+      <div class="col s12 m4 l8"><h2 class="brown-text" t="registration"></h2></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="firstNameErrors">
-          <input id="firstName" class="align-center" type="text" value.bind = "firstName & validateOnChangeOrBlur"/>
-          <!-- <h5 t="[prepend]first-name"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors">${errorInfo.error.message}</span></h5> -->
-          <h5 t="[prepend]first-name"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input class="align-center brown-text" id="firstName" class="align-center" type="text" value.bind = "firstName & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]first-name"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -20,8 +19,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="lastNameErrors">
-          <input id="lastName" class="align-center" type="text" value.bind = "lastName & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]last-name"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of lastNameErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input class="align-center brown-text" id="lastName" class="align-center" type="text" value.bind = "lastName & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]last-name"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of lastNameErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -30,8 +29,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="userNameErrors">
-          <input id="userName" class="align-center" type="text" value.bind = "userName & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]username"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input class="align-center brown-text" id="userName" class="align-center" type="text" value.bind = "userName & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]username"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -40,8 +39,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="emailErrors">
-          <input id="email" class="align-center" type="text" value.bind = "email & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input class="align-center brown-text" id="email" class="align-center" type="text" value.bind = "email & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]email"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -50,8 +49,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
           <div validation-errors.bind="passwordErrors">
-            <input id="password" class="align-center"type.bind="passwordType" value.bind = "password & validateOnChangeOrBlur"/>
-            <h5 t="[prepend]password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
+            <input class="align-center brown-text" id="password" class="align-center"type.bind="passwordType" value.bind = "password & validateOnChangeOrBlur"/>
+            <h5 class="brown-text" t="[prepend]password"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
           </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -60,8 +59,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="confirmPasswordErrors">
-          <input id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]confirm-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input class="align-center brown-text" id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]confirm-password"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
@@ -69,13 +68,13 @@
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="register-submit" t="submit"></button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-1 waves-effect waves-light" type="submit" name="register-submit" t="submit"></button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="register-cancel" route-href="route: login;" t="cancel"></a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-1  waves-effect waves-light" name="register-cancel" route-href="route: login;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <user-notification show.bind="userNotification"></user-notification>
