--- a/src/resetpassword/requestResetPassword.html
+++ b/src/resetpassword/requestResetPassword.html
@@ -4,21 +4,21 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="emailErrors">
-          <input id="email" class="align-center" type="text" value.bind = "email & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]reg-email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input id="email" class="align-center brown-text" type="text" value.bind = "email & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]reg-email"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="new-email-submit" t="submit"></button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-1 waves-effect waves-light" type="submit" name="new-email-submit" t="submit"></button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="email-update-cancel" route-href="route: login;" t="cancel"></a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-1 waves-effect waves-light" name="email-update-cancel" route-href="route: login;" t="cancel"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <user-notification show.bind="userNotification"></user-notification>
