--- a/src/resetpassword/resetpassword.html
+++ b/src/resetpassword/resetpassword.html
@@ -4,8 +4,8 @@
     <div class="col s12 m4 l2"><p></p></div>
     <div class="col s12 m4 l8">
       <div validation-errors.bind="passwordErrors">
-        <input id="newPassword" class="align-center"type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
-        <h5 t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
+        <input id="newPassword" class="align-center brown-text" type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
+        <h5 class="brown-text" t="[prepend]new-password"> <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors" t.bind="errorInfo.error.message"></span></h5>
       </div>
     </div>
       <div class="col s12 m4 l2"><p></p></div>
@@ -14,8 +14,8 @@
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8">
         <div validation-errors.bind="confirmPasswordErrors">
-          <input id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
-          <h5 t="[prepend]confirm-password"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
+          <input id="confirmPassword" class="align-center brown-text" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
+          <h5 class="brown-text" t="[prepend]confirm-password"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors" t.bind="errorInfo.error.message"></span></h5>
         </div>
       </div>
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
@@ -25,12 +25,12 @@
     <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="reset-password" t="submit"></button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-1 waves-effect waves-light" type="submit" name="reset-password" t="submit"></button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="password-reset-cancel" route-href="route: login;" t="cancel"></a></div>
+      <div class="col s12 m4 l8"> <a class="grow btn light-green darken-1 waves-effect waves-light" name="password-reset-cancel" route-href="route: login;" t="cancel"></a></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <user-notification show.bind="userNotification"></user-notification>
