--- a/src/usermamagementredirect/notificationredirect.html
+++ b/src/usermamagementredirect/notificationredirect.html
@@ -1,11 +1,11 @@
 <template>
-  <div class="row confirm-email-text col l12 m12 s12 yellow darken-2 transparent-title valign-wrapper">
-    <h5 t="[html]um-notification" t-params.bind="userManagementNotification"></h5>
+  <div class="row confirm-email-text col l12 m12">
+    <h5 class="brown-text" t="[html]um-notification" t-params.bind="userManagementNotification"></h5>
   </div>
   <notification></notification>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="OK" route-href="route.bind: okButton" t="i-see"></a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-1 waves-effect waves-light" name="OK" route-href="route.bind: okButton" t="i-see"></a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
