added cookie consent and policy from aurelia-plugins-cookie-consent.

--- a/src/app.html
+++ b/src/app.html
@@ -48,5 +48,6 @@
         </div>
       </ul>
     </md-sidenav>
+    <aup-cookie-consent button="${ 'button-text' & t }" message="${ 'message-text' & t }"></aup-cookie-consent>
   <router-view></router-view>
 </template>
