--- a/src/basemap.html
+++ b/src/basemap.html
@@ -3,7 +3,7 @@
   <div>
     <div class="row main-row">
       <ul class="light-green darken-1 collection with-header col l3 m3 s3 layer-list scrollbar-hidden">
-        <li class="collection-header light-green darken-3"><h4 t="layers">Layers</h4></li>
+        <li class="collection-header light-green darken-3 white-text"><h4 t="layers">Layers</h4></li>
           <div class="collapsible-open-close-events">
             <ul md-collapsible md-on-open-start.delegate="collapsibleOpen($event.detail.el.childNodes[1].id)" md-on-close-start.delegate="collapsibleClose($event.detail.el.childNodes[1].id)">
               <li repeat.for="layer of layers | objectKeys">
