--- a/src/registration.html
+++ b/src/registration.html
@@ -68,6 +68,38 @@
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
+      <p>
+        <div class="col s12 m4 l8"><a route-href="route: disclaimer;" t="disclaimer-link"></a></div>
+      </p>
+      <div class="col s12 m4 l2"><p></p></div>
+    </div>
+    <div class="row align-center">
+      <div class="col s12 m4 l2"><p></p></div>
+      <p>
+        <div class="col s12 m4 l8"><a route-href="route: privacypolicy;" t="privacy-policy-link"></a></div>
+      </p>
+      <div class="col s12 m4 l2"><p></p></div>
+    </div>
+    <div class="row align-center">
+      <div class="col s12 m4 l2"><p></p></div>
+      <p>
+        <div class="col s12 m4 l8"><a route-href="route: termsandconditions;" t="terms-policy-link"></a></div>
+      </p>
+      <div class="col s12 m4 l2"><p></p></div>
+    </div>
+    
+    <div class="row align-center">
+      <div class="col s12 m4 l2"><p></p></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="termsCheckedErrors">
+            <md-checkbox checked.bind="termsChecked" id="termsCheckbox"  value.bind = "termsChecked & validateOnChangeOrBlur"><span class="brown-text" t="[prepend]terms-checkbox"><span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of termsCheckedErrors" t.bind="errorInfo.error.message"></span></span></md-checkbox>
+            
+        </div>
+      </div>
+      <div class="col s12 m4 l2"><p></p></div>
+    </div>
+    <div class="row align-center">
+      <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8"> <button class="grow btn light-green darken-1 waves-effect waves-light" type="submit" name="register-submit" t="submit"></button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
