Added new datasets.

--- a/src/app.html
+++ b/src/app.html
@@ -54,7 +54,7 @@
           <h6 class="brown-text" t="cookie-consent-text"></h6>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-no-margin">
         <div class="col s10 m10 l10">
           <a route-href="cookiepolicy" t="cookie-consent-link"></a>
         </div>
