--- a/src/basemap.html
+++ b/src/basemap.html
@@ -8,7 +8,11 @@
             <ul md-collapsible md-on-open-start.delegate="collapsibleOpen($event.detail.el.childNodes[1].id)" md-on-close-start.delegate="collapsibleClose($event.detail.el.childNodes[1].id)">
               <li repeat.for="layer of layers | objectKeys">
                 <div class="collapsible-header light-green darken-${layer.id+2}" id=${layer.id}>
+                  <img class="product-icon" src.bind="getUrl(layer.icon)">
                   <h5 class="white-text">${layer.name}</h5>
+                  <div class="valign-wrapper">
+                    <i class="material-icons icon-white product-info">fact_check</i>
+                  </div>
                 </div>
                 <div id="collapsible-body${layer.id}" class="collapsible-body">
                   <div class="row">
@@ -25,12 +29,24 @@
                   </div>
                   <div id="legend-holder${layer.id}"></div>
                   <div>
-                    <a id='refresh' md-button="floating: true;" md-tooltip="position: bottom; text: Reset range settings;" md-waves="color: light;" class="tr-green" click.trigger="resetRangeSettings(layer.id)"><i class="material-icons icon-white">cached</i></a>
-                    <a id='identify' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get value at clicked locations;" md-waves="color: light;" click.trigger="toggleTool('identify')" class.bind="buttonCheck.identify.state ? 'lime' : 'tr-green'"><i class.bind="buttonCheck.identify.state ? 'material-icons icon-grey' : 'material-icons icon-white'">details</i></a>
-                    <a id='zonalStat' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get zonal statistics for drawn polygon;" md-waves="color: light;" class.bind="buttonCheck.zonalStat.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('zonalStat')"><i class.bind="buttonCheck.zonalStat.state ? 'material-icons icon-grey' : 'material-icons icon-white'">dashboard</i></a>
-                    <a id='tsChart' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get time series chart at clicked locations;" md-waves="color: light;" class.bind="buttonCheck.tsChart.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('tsChart')"><i class.bind="buttonCheck.tsChart.state ? 'material-icons icon-grey' : 'material-icons icon-white'">timeline</i></a>
-                    <a id='zonalTSChart' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get time series chart for drawn polygon;" md-waves="color: light;" class.bind="buttonCheck.zonalTSChart.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('zonalTSChart')"><i class.bind="buttonCheck.zonalTSChart.state ? 'material-icons icon-grey' : 'material-icons icon-white'">multiline_chart</i></a>
-                    <a id='profile' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get profile chart at drawn line;" md-waves="color: light;" class.bind="buttonCheck.profile.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('profile')"><i class.bind="buttonCheck.profile.state ? 'material-icons icon-grey' : 'material-icons icon-white'">terrain</i></a>
+                    <a id='refresh' md-button="floating: true;" md-tooltip="position: bottom; text: Reset range settings;" md-waves="color: light;" class="tr-green tool-button-border" click.trigger="resetRangeSettings(layer.id)">
+                      <i class="material-icons icon-white">cached</i>
+                    </a>
+                    <a id='identify' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get value at clicked locations;" md-waves="color: light;" click.trigger="toggleTool('identify')" class.bind="buttonCheck.identify.state ? 'lime' : 'tr-green'">
+                      <i class.bind="buttonCheck.identify.state ? 'material-icons icon-grey' : 'material-icons icon-white'">details</i>
+                    </a>
+                    <a id='zonalStat' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get zonal statistics for drawn polygon;" md-waves="color: light;" class.bind="buttonCheck.zonalStat.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('zonalStat')">
+                      <i class.bind="buttonCheck.zonalStat.state ? 'material-icons icon-grey' : 'material-icons icon-white'">dashboard</i>
+                    </a>
+                    <a id='tsChart' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get time series chart at clicked locations;" md-waves="color: light;" class.bind="buttonCheck.tsChart.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('tsChart')">
+                      <i class.bind="buttonCheck.tsChart.state ? 'material-icons icon-grey' : 'material-icons icon-white'">timeline</i>
+                    </a>
+                    <a id='zonalTSChart' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get time series chart for drawn polygon;" md-waves="color: light;" class.bind="buttonCheck.zonalTSChart.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('zonalTSChart')">
+                      <i class.bind="buttonCheck.zonalTSChart.state ? 'material-icons icon-grey' : 'material-icons icon-white'">multiline_chart</i>
+                    </a>
+                    <a id='profile' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get profile chart at drawn line;" md-waves="color: light;" class.bind="buttonCheck.profile.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('profile')">
+                      <i class.bind="buttonCheck.profile.state ? 'material-icons icon-grey' : 'material-icons icon-white'">terrain</i>
+                    </a>
                   </div>
                 </div>
               </li>
