Added instruction to look for results at the bottom of the page and fixed one missing translation.

--- a/src/basemap.html
+++ b/src/basemap.html
@@ -49,6 +49,7 @@
                     <a id='profile' md-button="floating: true;" md-tooltip="position: bottom; text: Toggle get profile chart at drawn line;" md-waves="color: light;" class.bind="buttonCheck.profile.state ? 'lime' : 'tr-green'" click.trigger="toggleTool('profile')">
                       <i class.bind="buttonCheck.profile.state ? 'material-icons icon-grey' : 'material-icons icon-white'">terrain</i>
                     </a>
+                    <p t="tool-parameters-and-results"></p>
                   </div>
                 </div>
               </li>
