--- a/src/app.html
+++ b/src/app.html
@@ -48,7 +48,7 @@
         </div>
       </ul>
     </md-sidenav>
-    <div class="cookie-consent" if.bind="!cookieConsent">
+    <div class="cookie-consent" show.bind="!cookieConsent">
       <div class="row">
         <div class="col s12 m12 l12">
           <h6 class="brown-text" t="cookie-consent-text"></h6>
